[mips64] MacroAssembler::move8ZeroExtend unimplemented
Categories
(Core :: JavaScript Engine, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox-esr128 | --- | fixed |
firefox128 | --- | wontfix |
firefox129 | --- | fixed |
firefox130 | --- | fixed |
People
(Reporter: flygoat, Assigned: flygoat)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(3 files)
48 bytes,
text/x-phabricator-request
|
Details | Review | |
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-esr128+
|
Details | Review |
48 bytes,
text/x-phabricator-request
|
phab-bot
:
approval-mozilla-beta+
|
Details | Review |
Steps to reproduce:
Build js
Actual results:
Build failure due to MacroAssembler::move8ZeroExtend unimplemented
Expected results:
Build successful.
Assignee | ||
Updated•5 months ago
|
Comment 1•5 months ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::JavaScript Engine' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•5 months ago
|
||
:anba, since you are the author of the regressor, bug 1873042, could you take a look?
For more information, please visit BugBot documentation.
Updated•5 months ago
|
Assignee | ||
Comment 3•5 months ago
|
||
Port D197690 for MIPS.
Signed-off-by: Jiaxun Yang <jiaxun.yang@flygoat.com>
Updated•5 months ago
|
Comment 4•5 months ago
|
||
Set release status flags based on info from the regressing bug 1873042
Updated•5 months ago
|
Updated•5 months ago
|
Assignee | ||
Comment 6•5 months ago
|
||
Port D197690 for MIPS.
Signed-off-by: Jiaxun Yang <jiaxun.yang@flygoat.com>
Original Revision: https://phabricator.services.mozilla.com/D217672
Updated•5 months ago
|
Comment 7•5 months ago
|
||
esr128 Uplift Approval Request
- User impact if declined: Faild to build from source on MIPS64 platform
- Code covered by automated testing: yes
- Fix verified in Nightly: no
- Needs manual QE test: no
- Steps to reproduce for manual QE testing: ./mach build for MIPS64
- Risk associated with taking this patch: N/A
- Explanation of risk level: Didn't touch any official supported platform
- String changes made/needed: No
- Is Android affected?: no
Comment 8•5 months ago
|
||
bugherder |
Comment 9•5 months ago
|
||
The patch landed in nightly and beta is affected.
:flygoat, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox129
towontfix
.
For more information, please visit BugBot documentation.
Updated•5 months ago
|
Assignee | ||
Comment 10•5 months ago
|
||
Port D197690 for MIPS.
Signed-off-by: Jiaxun Yang <jiaxun.yang@flygoat.com>
Original Revision: https://phabricator.services.mozilla.com/D217672
Updated•5 months ago
|
Comment 11•5 months ago
|
||
beta Uplift Approval Request
- User impact if declined: Faild to build from source on MIPS64 platform
- Code covered by automated testing: yes
- Fix verified in Nightly: yes
- Needs manual QE test: no
- Steps to reproduce for manual QE testing: ./mach build for MIPS64
- Risk associated with taking this patch: N/A
- Explanation of risk level: Didn't touch any official supported platform
- String changes made/needed: No
- Is Android affected?: no
Assignee | ||
Comment 12•5 months ago
|
||
Nominate for beta to keep source buildable for downstream distros on MIPS64.
Updated•5 months ago
|
Updated•5 months ago
|
Comment 13•5 months ago
|
||
uplift |
Updated•5 months ago
|
Comment 14•5 months ago
|
||
uplift |
Updated•5 months ago
|
Description
•