Bug 1909793: Implement MacroAssembler::move8ZeroExtend for mips  a=dmeehan

Port D197690 for MIPS.

Signed-off-by: Jiaxun Yang <jiaxun.yang@flygoat.com>

Original Revision: https://phabricator.services.mozilla.com/D217672

Differential Revision: https://phabricator.services.mozilla.com/D217779